static/graphs.css
/*  http://stackoverflow.com/questions/13585186/how-can-i-use-custom-fonts-on-a-website  */

@font-face {
    font-family: "Nunito-Light";
    src: url("resources/nunito/Nunito-Light.ttf");
}

body {
    margin: 0;
    padding: 0;
    background: #ececec;
    font-family: "Nunito-Light";
}

.page_contents {
    width: 1100px;
    height: 100vh;
    margin: 0 auto;
    background: #fcfffc;
}

.header-section {
    height: 80px;
    /*padding-top: 20px;*/
}

.header {
    width: 80%;
    height: 100%;
    margin: 0 auto;
    display: inline-block;
}

.header-btn {
    width: 10%;
    height: 100%;
    display: inline-block;
}

.header-btn a div {
    padding-top: 25px;
}

.header-btn.prev, .header-btn.prev a {
    float: left;
}

.header-btn.next, .header-btn.next a {
    float: right;
}

.header-btn a {
    width: 100%;
    height: 100%;
    cursor: pointer;
    background-color: #f7f7f7;
    border: 1px solid #adadad;
    text-align: center;
    font-size: 14px;
    font-family: "Nunito-Light";
    display: table-cell;
    vertical-align: center;
    transition-duration: 0.4s;
}

.header-btn a:hover {
    background-color: #d9d9d9;
    border: 1px solid black;
}

.header-btn a:active, .header-btn a:focus {
    outline: none;
}

div.hide {
    visibility: hidden;
    display: none;
}

.header .title {
    text-align: center;
    font-family: "Nunito-Light";
    font-size: 45px;
    color: black;
    margin: 0;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
    padding: 10px 5px 0 5px;
}

.message-count {
    text-align: center;
    font-size: 15px;
    font-family: "Nunito-Light";
    font-weight: 700;
}

.graph_body_settings {
    width: 100%;
    /*height: inherit;*/
    padding: 0 4px;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
}

.graph_body {
    width: 100%;
    height: 400px;
    /*margin-left: 4px;*/
}

.graph {
    width: 80%;
    height: 100%;
    float: left;
    display: inline;
    margin-right: 6px;    
    border: 1px solid #005fff; 
    padding-right: 1px;
}

.graph_type_button {
    background-color: white;
    color: black;
    border: 1px solid #005fff; 
    padding: 14px 40px;
    border-radius: 8px;
    text-align: center;
    font-size: 14px;
    font-family: "Nunito-Light";
    cursor: pointer;
    display: block;
    margin: 16px 4px;
    transition-duration: 0.4s;
}

.graph_type_button:hover {
    background-color: #96b9e3; 
    color: white;
}

.graph_type_button:focus, .graph_type_button.graph_button_active {
    background-color: #4484ce; 
    border: 1px solid #005fff;
    color: white;
    box-shadow: none;
    outline: none;
}

.select-conversation {
    background-color: white;
    color: black;
    border: 1px solid #f9cf00;
    padding: 14px 40px;
    border-radius: 8px;
    text-align: center;
    font-size: 14px;
    font-family: "Nunito-Light";
    cursor: pointer;
    display: block;
    margin: 16px 4px;
    transition-duration: 0.4s;
}

.select-conversation:hover {
    background-color: #fdf5cc;
    color: black;
}

.select-conversation:focus {
    background-color: #ec8217; 
    border: 1px solid #ec8217;
    color: white;
    box-shadow: none;
    outline: none;
}

.button_box {
    /*margin-right: 4px;*/
}

.settings-container {
    width: 100%;
    height: 150px;
    margin-top: 20px;
}

.settings-header {
    height: 20%;
}

.settings-body {
    height: 80%;
    width: 80%;
}




/* ---------------------------------- Settings section 1 ---------------------------------- */
.zoom-types {
    display: inline-block;
    height: 100%;
    float: left;
    border: 1px solid #d9d9d9;
    background-color: white;
}

.zoom-types span {
    padding: 5px;
    display: block;
    text-align: center;
}

/* end zoom changing section */


/* start participant selection section*/
.stacked-area {
    float: left;
    width: 50%;
    height: 100%;
    margin-left: 20px;
    border: 1px solid #d9d9d9;
    border-top-style: none;
    background-color: white;
}

.swap-clear-select {
    height: 20%;
}

.swap-clear-select div {
	border: 1px solid #d9d9d9;
	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
}

#swap-graphs, .clear-all, .select-all {
    text-align: center;
    height: 100%;
    display: inline-block;
    float: left;
    background-color: white;
}

#swap-graphs:hover, .clear-all:hover, .select-all:hover {
    cursor: pointer;
    background-color: #f5bb82;
}

#swap-graphs {
    width: 50%;
}
.clear-all, .select-all {
    width: 25%;
}

.stacked-area .swap-clear-select .clear-all {
	border-left-style: none;
	border-right-style: none;
}

.stacked-area .people {
    overflow-x: hidden;
    overflow-y: scroll;
    height: 80%;
}

.stacked-area .people .tr {
    width: 100%;
    padding-left: 2px;
    height: 30px;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
}

.tr-left:hover {
    cursor: pointer;
    background-color: #fefbea;
}

.tr-left.people-active {
    background-color: #e9f1f9;
}

.tr-left.people-active:hover {
    background-color: #fefbea;
}

/* http://stackoverflow.com/questions/1260122/expand-a-div-to-take-the-remaining-width */
.tr-left {
    width: auto;
    overflow: hidden;
}

.tr-right {
    float: right;
    width: 25px;
    padding-right: 10px;
}

.tr-right input {
    width: 100%;
}

.tr-left .rank {
    float: left;
    width: 25px;
}

.tr-left .specific-person {
    width: auto;
    overflow: hidden;
}
/* end participant selection section*/


/* start stack-type styling */
.stack-type {
    display: inline-block;
    height: 100%;
    float: left;
    margin-left: 20px;
    border: 1px solid #d9d9d9;

    /* CHANGE THIS COLOR THEN DELETE THIS COMMENT */
    background-color: white;
}

.stack-type span {
    padding: 5px;
    display: block;
    margin: 0 auto;
    text-align: center;
}

.stack-type .radio {
    padding-right: 10px;
}




/* ---------------------------------- Settings section 2 ---------------------------------- */

#window_size {
    margin-left: 30px;
}

